# db/models/models.go
@@ -18,15 +18,15 @@ type Base struct {
 type Wager struct {
 	Base
 	Id                  uint          `yaml:"id" json:"id" gorm:"primaryKey;autoIncrement"`
-	TotalWagerValue     int64         `yaml:"total_wager_value" json:"total_wager_value"`
-	Odd                 int32         `yaml:"odd" json:"odd"`
-	SellingPercentage   int32         `yaml:"selling_percentage" json:"selling_percentage"`
+	TotalWagerValue     float64       `yaml:"total_wager_value" json:"total_wager_value"`
+	Odds                float64       `yaml:"odds" json:"odds"`
+	SellingPercentage   float64       `yaml:"selling_percentage" json:"selling_percentage"`
 	SellingPrice        float64       `yaml:"selling_price" json:"selling_price"`
 	CurrentSellingPrice float64       `yaml:"current_selling_price" json:"current_selling_price"`
-	PercentageSold      int32         `yaml:"percentage_sold" json:"percentage_sold"`
+	PercentageSold      float64       `yaml:"percentage_sold" json:"percentage_sold"`
 	AmountSold          float64       `yaml:"amount_sold" json:"amount_sold"`
-	PlacedAt            time.Time     `yaml:"placed_at" json:"placed_at"`
-	Transactions        []Transaction `gorm:"constraint:OnDelete:CASCADE;foreignkey:WagerId;references:Id"`
+	PlacedAt            time.Time     `yaml:"placed_at" json:"placed_at" gorm:"autoCreateTime"`
+	Transactions        []Transaction `gorm:"constraint:OnDelete:CASCADE;foreignkey:WagerId;references:Id" json:"-"`
 }
 
 type Transaction struct {
@@ -34,5 +34,5 @@ type Transaction struct {
 	Id          uint      `yaml:"id" json:"id" gorm:"primaryKey;autoIncrement"`
 	WagerId     uint      `yaml:"wager_id" json:"wager_id" gorm:"primaryKey;autoIncrement"`
 	BuyingPrice float64   `yaml:"buying_price" json:"buying_price"`
-	BoughtAt    time.Time `yaml:"bought_at" json:"bought_at"`
+	BoughtAt    time.Time `yaml:"bought_at" json:"bought_at" gorm:"autoCreateTime"`
 }
